lib/bait/tests/inout_error/map_literal_init.out
lib/bait/tests/inout_error/map_literal_init.in.bt:3:11 error: expected value type string, got i32
lib/bait/tests/inout_error/map_literal_init.in.bt:4:5 error: expected key type string, got bool
