lib/bait/tests/inout_error/map_literal_init.in.bt
m := map{
	"hello": "world"
	'asd': 123
	true: 'hi'
}
